feat: convert subscription forecast to rubles
